# scrolls-of-poseidon

./: .env  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  release_history.md
data/: metadata.csv
scripts/: __init__.py  build.sh  format.sh  lint.sh  test.sh
