[project]
name = "This project aims to build a large-scale, high-quality corpus of text from oceanographic research papers, environmental reports, and conservation literature. The resulting dataset will be used to train specialized language models for tasks in marine science."
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.13"
dependencies = [
    "numpy>=2.3.1",
]
