[project]
name = "scrolls-of-poseidon"
version = "0.1.0"
description = "This project aims to build a large-scale, high-quality corpus of text from oceanographic research papers, environmental reports, and conservation literature. The resulting dataset will be used to train specialized language models for tasks in marine science."
authors = [{ name = "Vimugdh Lall", email = "vimugdh@users.noreply.github.com" }]
readme = "README.md"
requires-python = ">=3.11.13"
dependencies = [
    "lxml>=5.4.0",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
]

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "tests"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "coverage>=7.9.1",
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "ruff>=0.12.0",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "D",   # pydocstyle
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]
